--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             >
               <div
                 class="formData">
-                <label>First Name</label><br>
+                <label for="first">First Name</label><br>
                 <input
                   class="text-control"
                   type="text"
@@ -73,19 +73,13 @@
                   minlength="2"
                 /><br>
               </div>
-              <div
-                class="formData">
-                <label>Last Name</label><br>
-                <input
-                  class="text-control"
-                  type="text"
-                  id="last"
-                  name="last"
-                /><br>
+              <div class="formData"> <!--Added Lenght for lastname-->
+                <label for="last">Last Name</label><br>
+                <input class="text-control" type="text" id="last" name="last" minlength="2"/><br>
               </div>
               <div
                 class="formData">
-                <label>Email</label><br>
+                <label for="email">Email</label><br>
                 <input
                   class="text-control"
                   type="email"
@@ -95,7 +89,7 @@
               </div>
               <div
                 class="formData">
-                <label>Birthdate</label><br>
+                <label for="birthdate">Birthdate</label><br>
                 <input
                   class="text-control"
                   type="date"
@@ -105,7 +99,7 @@
               </div>
               <div
                 class="formData">
-                <label>How many tournaments have you attended? </label><br>
+                <label for="quantity" >How many tournaments have you attended? </label><br>
                 <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
               </div>
               <p class="text-label">Which location?</p>
@@ -178,7 +172,6 @@
                   Portland</label
                 >
               </div>
-
               <div
                 class="formData">
                 <input
