--- a/index.html
+++ b/index.html
@@ -77,15 +77,9 @@
                 <label for="last">Last Name</label><br>
                 <input class="text-control" type="text" id="last" name="last" minlength="2"/><br>
               </div>
-              <div
-                class="formData">
+              <div class="formData">
                 <label for="email">Email</label><br>
-                <input
-                  class="text-control"
-                  type="email"
-                  id="email"
-                  name="email"
-                /><br>
+                <input class="text-control" type="email" id="email" name="email"/><br>
               </div>
               <div
                 class="formData">
