Solved Isuue No2. Add functionality to the form

--- a/index.html
+++ b/index.html
@@ -81,15 +81,9 @@
                 <label for="email">Email</label><br>
                 <input class="text-control" type="email" id="email" name="email"/><br>
               </div>
-              <div
-                class="formData">
+              <div class="formData">
                 <label for="birthdate">Birthdate</label><br>
-                <input
-                  class="text-control"
-                  type="date"
-                  id="birthdate"
-                  name="birthdate"
-                /><br>
+                <input class="text-control" type="date"id="birthdate" name="birthdate"/><br>
               </div>
               <div
                 class="formData">
