--- a/index.html
+++ b/index.html
@@ -56,12 +56,7 @@
         <div class="content">
           <span class="close" onclick="closeModal()"></span>
           <div class="modal-body">
-            <form
-              name="reserve"
-              action="index.html"
-              method="get"
-              onsubmit="return validate();"
-            >
+            <form name="reserve" action="index.html" method="get" onsubmit="return validate();">
               <div
                 class="formData">
                 <label for="first">First Name</label><br>
