--- a/index.html
+++ b/index.html
@@ -56,25 +56,22 @@
         <div class="content">
           <span class="close" onclick="closeModal()"></span>
           <div class="modal-body">
-            <form name="reserve" action="index.html" method="get" onsubmit="return validate();">
+            <form name="reserve" action="#" method="get" onsubmit="return validate();">
               <div
                 class="formData">
                 <label for="first">First Name</label><br>
-                <input
-                  class="text-control"
-                  type="text"
-                  id="first"
-                  name="first"
-                  minlength="2"
-                /><br>
+                <input class="text-control" type="text" id="first" name="first" minlength="2"/><br>
+                <div class="error" id="firstError"></div>
               </div>
               <div class="formData"> <!--Added Lenght for lastname-->
                 <label for="last">Last Name</label><br>
                 <input class="text-control" type="text" id="last" name="last" minlength="2"/><br>
+                <div class="error" id="lastError"></div>
               </div>
               <div class="formData">
                 <label for="email">Email</label><br>
                 <input class="text-control" type="email" id="email" name="email"/><br>
+                <div class="error" id="mailError"></div>
               </div>
               <div class="formData">
                 <label for="birthdate">Birthdate</label><br>
@@ -84,21 +81,15 @@
                 class="formData">
                 <label for="quantity" >How many tournaments have you attended? </label><br>
                 <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
+                <div class="error" id="quantityError"></div>
               </div>
               <p class="text-label">Which location?</p>
               <div
                 class="formData">
-                <input
-                  class="checkbox-input"
-                  type="radio"
-                  id="location1"
-                  name="location"
-                  value="New York"
-                />
+                <input class="checkbox-input" type="radio" id="location1" name="location" value="New York"/>
                 <label class="checkbox-label" for="location1">
                   <span class="checkbox-icon"></span>
-                  New York</label
-                >
+                  New York</label>
                 <input
                   class="checkbox-input"
                   type="radio"
@@ -152,8 +143,8 @@
                 />
                 <label class="checkbox-label" for="location6">
                   <span class="checkbox-icon"></span>
-                  Portland</label
-                >
+                  Portland</label>
+                  <div class="error" id="locationError"></div>
               </div>
               <div
                 class="formData">
@@ -175,12 +166,7 @@
                 </label>
                 <br>
               </div>
-              <input
-                class="btn-submit"
-                type="submit"
-                class="button"
-                value="Go"
-              />
+              <input class="btn-submit" type="submit" class="button" value="Go"/>
             </form>
           </div>
         </div>
