--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
               </div>
               <div class="formData">
                 <label for="birthdate">Birthdate</label><br>
-                <input class="text-control" type="date"id="birthdate" name="birthdate"/><br>
+                <input class="text-control" type="date" id="birthdate" name="birthdate"/><br>
+                <div class="error" id="bdayError"></div>
               </div>
               <div
                 class="formData">
@@ -148,17 +149,13 @@
               </div>
               <div
                 class="formData">
-                <input
-                  class="checkbox-input"
-                  type="checkbox"
-                  id="checkbox1"
-                  checked
-                />
+                <input class="checkbox-input" type="checkbox" id="checkbox1" name="term" checked />
                 <label class="checkbox2-label" for="checkbox1" required>
                   <span class="checkbox-icon"></span>
                   I have read and I agree to GameOn's terms and conditions.
                 </label>
                 <br>
+                <div class="error" id="conditionError"></div>
                 <input class="checkbox-input" type="checkbox" id="checkbox2" />
                 <label class="checkbox2-label" for="checkbox2">
                   <span class="checkbox-icon"></span>
