--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               </div>
               <div
                 class="formData">
-                <input class="checkbox-input" type="checkbox" id="checkbox1" name="term" checked />
+                <input class="checkbox-input" type="checkbox" id="checkbox1" name="term"/>
                 <label class="checkbox2-label" for="checkbox1" required>
                   <span class="checkbox-icon"></span>
                   I have read and I agree to GameOn's terms and conditions.
