--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                   I have read and I agree to GameOn's terms and conditions.
                 </label>
                 <div class="error" id="hoErr"></div>
-                <input class="checkbox-input" type="checkbox" id="checkbox2" name="accept[]"/>
+                <input class="checkbox-input" type="checkbox" id="checkbox2"/>
                 <label class="checkbox2-label" for="checkbox2">
                   <span class="checkbox-icon"></span>
                   Please sign me up to be notified about future events.
