Finished Validation Functionality

--- a/index.html
+++ b/index.html
@@ -59,17 +59,17 @@
               <div
                 class="formData">
                 <label for="first">First Name</label><br>
-                <input class="text-control" type="text" id="first" name="first" minlength="2"/><br>
+                <input class="text-control" type="text" id="first" name="first"/><br>
                 <div class="error" id="firstError"></div>
               </div>
               <div class="formData"> <!--Added Lenght for lastname-->
                 <label for="last">Last Name</label><br>
-                <input class="text-control" type="text" id="last" name="last" minlength="2"/><br>
+                <input class="text-control" type="text" id="last" name="last"/><br>
                 <div class="error" id="lastError"></div>
               </div>
               <div class="formData">
                 <label for="email">Email</label><br>
-                <input class="text-control" type="email" id="email" name="email"/><br>
+                <input class="text-control" type="text" id="email" name="email"/><br>
                 <div class="error" id="mailError"></div>
               </div>
               <div class="formData">
@@ -80,7 +80,7 @@
               <div
                 class="formData">
                 <label for="quantity" >How many tournaments have you attended? </label><br>
-                <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
+                <input type="number" class="text-control" id="quantity" name="quantity">
                 <div class="error" id="quantityError"></div>
               </div>
               <p class="text-label">Which location?</p>
