Solved Issue No.5 Display Success Message

--- a/index.html
+++ b/index.html
@@ -164,8 +164,18 @@
               <input class="btn-submit" type="submit" class="button" value="Go"/>
             </form>
           </div>
+        </div><!--Success Modal-->
+        <div class="bground-success" id="Successy">
+          <div class="content-success">
+            <span class="close" onclick="closeModal()"></span>
+            <p class="hero-text-success">
+              Thanks for your submission!<br>
+              We were happy to hear from <br>
+              You!
+            </p>
+          </div>
         </div>
-      </div>
+      </div><!--End bg ground-->
     </main>
     <footer>
       <p class="copyrights">
