--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           sign up now
         </button>
       </div>
-      <div class="bground">
+      <div class="bground" id="test">
         <div class="content">
           <span class="close" onclick="closeModal()"></span>
           <div class="modal-body">
