Delayed Timer and Finished Project

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         </div><!--Success Modal-->
         <div class="bground-success" id="Successy">
           <div class="content-success">
-            <span class="close" onclick="closeModal()"></span>
+            <span class="close" onclick="setTimeout(function () { window.location.reload(); }, 2)"></span>
             <p class="hero-text-success">
               Thanks for your submission!<br>
               We were happy to hear from <br>
