--- a/index.html
+++ b/index.html
@@ -175,6 +175,9 @@
               We were happy to hear from <br>
               You!
             </p>
+            <br>
+            <!--Close Button Here-->
+            <input class="btn-submit" type="submit" class="button" value="Close" onclick="setTimeout(function () { window.location.reload(); }, 2)"/>
           </div>
         </div>
       </div><!--End bg ground-->
